# avatar-bevi

./: Cargo.toml  Trunk.toml  download_model.sh  index.html  optimize_model.sh  wasm-pack.toml
.cargo/: config.toml
assets/: config.json
src/: lib.rs  main.rs
