[package]
name = "avatar_bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "avatar_bevy_native"
path = "src/main.rs"