[package]
name = "avatar_bevy"
version = "0.1.0"
edition = "2021"

[lib]
name = "avatar_bevy_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "avatar_bevy_bin"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.10.0", features = [
    "animation",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_render",
    "png",
    "x11",
    "wayland"
]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement"
]}
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.10.0", features = [
    "animation",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_render",
    "png"
]}
uuid = { version = "1.1.2", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1